# django-settings-diff

./: .gitignore  AUTHORS  ChangeLog  README.rst  pyproject.toml  requirements.txt  setup.cfg
django_settings_diff/: cli.py  settingsdiff.py
