[metadata]
name = django_settings_diff
author = Thomas Chamberlin
author_email = thomaswchamberlin@gmail.com
description = Tool to help diff two Django settings modules
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/GreenBankObservatory/django-settings-diff
project-urls =
    Source Code = http://github.com/GreenBankObservatory/django-settings-diff
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python

[entry_points]
console_scripts =
    diffsettings = django_settings_diff.cli:main
